Fixed z-index bleeding and footer stacking (and scrolling away)

--- a/src/ggrc/assets/stylesheets/_common.scss
+++ b/src/ggrc/assets/stylesheets/_common.scss
@@ -607,6 +607,7 @@ select.multiple-selector {
   border-right: none !important;
   margin-left: 0 !important;
   margin-right: 0 !important;
+  z-index:9999;
   &.sticky-header {
     @include box-shadow(inset 0 0 3px 0 #bbb);
     border-top: none !important;
